--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         margin: 0; 
         display: flex; 
         width: 100%;
+        font-size: 2vh;
         background-color: #232221;
     }
     /* div {display: flex;   flex-direction: column; width: 100%;} */
