--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://arcms.w4v.es//Assets/Supreme/stylesheet.css">
     <script src="https://github.com/devongovett/pdfkit/releases/download/v0.10.0/pdfkit.standalone.js"></script>
     <script src="https://github.com/devongovett/blob-stream/releases/download/v0.1.3/blob-stream.js"></script>
-    <title>Document</title>
+    <title>Hat Pattern</title>
 </head>
 <body>
     
