style works for safari

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     section > svg {
         max-height: 100%;
         background-color: white;
+        max-width: 100%;
+        width: 100%;
     }
     .row,
     number-slider {
@@ -121,5 +123,6 @@
         }
 
     }
+
 </style>
 </html>
